// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`карточка: status === ERROR: вернет правильный результат, если есть оффер 1`] = `
Object {
  "key": "Данные расходятся с ПТС",
}
`;

exports[`карточка: status === OK: вернет правильный результат 1`] = `
Object {
  "key": "Характеристики совпадают с ПТС",
}
`;

exports[`карточка: status === UNKNOWN и is_updating = true: вернет правильный результат 1`] = `
Object {
  "key": "Данные из ПТС появятся позже",
}
`;

exports[`карточка: status === UNKNOWN: вернет правильный результат 1`] = `
Object {
  "key": "Данные расходятся с ПТС",
}
`;

exports[`отчет: status === ERROR: вернет правильный результат, если есть оффер 1`] = `
Object {
  "key": "Данные из ПТС",
  "value": "Есть расхождения в характеристиках",
}
`;

exports[`отчет: status === OK: вернет правильный результат 1`] = `
Object {
  "key": "Данные из ПТС",
  "value": "Найдены характеристики",
}
`;

exports[`отчет: status === UNKNOWN: вернет правильный результат 1`] = `
Object {
  "key": "Данные из ПТС",
  "value": "Информация появится чуть позже",
}
`;
